--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -1,1 +1,4 @@
-<p><%= @results %></p>
+<p id="results"><%= @results %></p>
+<button type="button" class="btn btn-primary" onclick="copyToClipboard('results')">Copy</button>
+<a href="/" class="btn btn-primary">Back</
+
