--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -17,5 +17,35 @@
 }
 
 .form-group {
-  width: 50%
+  width: 50%;
+}
+
+h1 span {
+  color: darkred;
+}
+
+td {
+  width: 150px;
+}
+
+tr.radioRow td {
+  width: 110px;
+}
+
+label.control-label {
+  font-size: 12px;
+  color: darkred;
+}
+
+table label {
+  padding-top: 0px !important;
+}
+
+body {
+  background-color: #fee !important;
+}
+
+input.btn {
+  position: relative;
+  right: 15px;
 }
